client/src/TaskPopup.css
@media (orientation:portrait){

    .TaskPopup-item {
        width:90% !important;
    }
}
@media (orientation:landscape){
    .TaskPopup-item {
        width:75% !important;
    }

}

.TaskPopup{
    position:fixed;
    left:0;
    top:0;
    right:0;
    bottom:0;
    background:rgba(0,0,0,0.75);
    display:block;
    overflow-y:scroll;
    z-index:10;
}
.TaskPopup-item{
    display:block;
    position:absolute;
    overflow-y:visible;
    overflow-x:visible;
    margin:0 auto;
    left:0;
    right:0;
    padding:0px;

    top:10%;
    bottom:10%;
   font-family:Schoolbell;
}


.TaskPopup-item .Page{
    margin:0 auto;padding:1em;
    border-radius:0;
    background:transparent;
    box-shadow:none;
    border:0px;
    width:100% !important;
}
.TaskPopup-item .Tier{
    width:100% !important;
    max-width:100% !important;

}

